--- a/lista.html
+++ b/lista.html
@@ -55,6 +55,8 @@
 <li>Kotlin</li>
 
 </ol>
+<!--ol utilizado para criar listas ordenadas-->
+<!--li utilizado para criar listas-->
 
 
 <h2>Meus Jogos Favoritos</h2>
@@ -68,6 +70,8 @@
 <li>Ninja Gaiden</li>
 <ul>Ninja GO</ul>
 <ul>Ninja Start</ul>
+<!--ul utilizado para criar listas aninhadas-->
+<!--li utilizado para criar listas-->
 
 
 
